[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/Fonts/PixelMusketeer-vEXO.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Sounds/OST/water_ambience.wav" type="AudioStream" id=2]
[ext_resource path="res://Screens/IntroScene.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=2]
size = 92
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 92
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 84
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 92
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=15]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath("SFXAmbience:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -80.0, -10.0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "FadeOut"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SFXAmbience:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -10.0, -80.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Line2FadeIn"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("BG/Scene1/Line2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Line3FadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath("BG/Scene1/Line3:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "Line4FadeIn"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("BG/Scene2/Line4:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "Line5FadeIn"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("BG/Scene2/Line5:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "Line6FadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath("BG/Scene2/Line6:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Scene1FadeIn"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("BG/Scene1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SFXAmbience:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -80.0, -10.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Scene1FadeOut"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("BG/Scene1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[node name="IntroScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Scene1" type="Control" parent="BG"]
modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Line1" type="Label" parent="BG/Scene1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -753.5
margin_top = -317.708
margin_right = 753.5
margin_bottom = 114.292
custom_fonts/font = SubResource( 2 )
text = "Legends tell of an ancient artifact that lies at the very bottom of the ocean..."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line2" type="Label" parent="BG/Scene1"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -744.0
margin_top = 94.0383
margin_right = 744.0
margin_bottom = 228.038
custom_fonts/font = SubResource( 3 )
text = "... the HEART OF THE ABYSS."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line3" type="Label" parent="BG/Scene1"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -289.5
margin_top = -136.687
margin_right = 289.5
margin_bottom = -65.6868
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.309804, 0.309804, 0.309804, 1 )
text = "(click to continue)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scene2" type="Control" parent="BG"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line4" type="Label" parent="BG/Scene2"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -761.0
margin_top = -284.827
margin_right = 761.0
margin_bottom = 77.1727
custom_fonts/font = SubResource( 9 )
text = "Despite being hidden in the vast and DANGEROUS depths, many divers covet this prized artifact..."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line5" type="Label" parent="BG/Scene2"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -367.0
margin_top = 107.419
margin_right = 367.0
margin_bottom = 210.419
custom_fonts/font = SubResource( 10 )
text = "... including YOU."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line6" type="Label" parent="BG/Scene2"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -289.5
margin_top = -136.687
margin_right = 289.5
margin_bottom = -65.6868
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.309804, 0.309804, 0.309804, 1 )
text = "(click to continue)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Transition" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 15 )
anims/FadeOut = SubResource( 11 )
anims/Line2FadeIn = SubResource( 5 )
anims/Line3FadeIn = SubResource( 7 )
anims/Line4FadeIn = SubResource( 12 )
anims/Line5FadeIn = SubResource( 13 )
anims/Line6FadeIn = SubResource( 14 )
anims/Scene1FadeIn = SubResource( 4 )
anims/Scene1FadeOut = SubResource( 8 )

[node name="SFXAmbience" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -80.0
autoplay = true
[connection signal="animation_finished" from="Transition" to="." method="_on_Transition_animation_finished"]
[connection signal="finished" from="SFXAmbience" to="." method="_on_SFXAmbience_finished"]
